src/assets/scss/components/_blog-controls.scss
.blog-controls {

  z-index: 1;
  bottom: calc(#{$blog-controls-margin-bottom} + 9vh);
  position: absolute;
  left: 50%;
  transform: translateX(-50%);

  .blog-search-button {
    position: absolute;
    left: -($blog-controls-search-width + 15px);
    display: flex;
    align-items: center;
    height: $blog-controls-line-height;
    width: $blog-controls-search-width;
    background: transparent;
    border: 0;
    padding: 0;

    .search-icon {
      fill: #fff;
      width: $blog-controls-line-height;
      height: $blog-controls-line-height;
      margin: 0 auto;
    }
  }

  .blog-filter {
    // margin-left: $blog-controls-search-width + $blog-controls-search-margin;

    .selected {
      position: relative;
      z-index: 1;
      width: $blog-controls-item-width;
      padding: 0 $blog-controls-horizontal-padding;

      &:after {
        position: absolute;
        right: $blog-controls-horizontal-padding;
        top: 50%;
        content: "";
        display: block;
        width: 13px;
        height: 10px;
        transform: translateY(-50%);
        @include arrow-icon(#333333);
      }
    }
    .selected,
    .dropdown li {
      cursor: pointer;
      height: $blog-controls-line-height;
      line-height: $blog-controls-line-height;
      background-color: #fff;
    }

    .loading-icon {
      position: absolute;
      right: 0;
      top: 0;
    }
  }

  @include susy-breakpoint($bp-medium, $susy) {

    bottom: calc(#{$blog-controls-margin-bottom} - #{$blog-margin-offset});

    .blog-filter {
      position: relative;

      .selected {
        width: $blog-controls-item-width;
      }
    }
  }
}

